tests/snapshots/generated_from_inputs__bad_bad001.snap
---
source: tests/fixtures.rs
description: "/*\n"
input_file: inputs/bad/bad001.lat
---
[31mError:[0m Syntax error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad001:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [31m/[0m[31m*[0m
 [38;5;240m  │[0m [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m  [31m╰[0m[31m─[0m[31m─[0m Lexing error
[38;5;246m───╯[0m
