tests/snapshots/generated_from_inputs__bad_bad002.snap
---
source: tests/fixtures.rs
description: "a\n"
input_file: inputs/bad/bad002.lat
---
[31mError:[0m Syntax error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad002:1:2 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ma[0m
 [38;5;240m  │[0m  [31m│[0m 
 [38;5;240m  │[0m  [31m╰[0m[31m─[0m Unexpected end of file
 [38;5;240m  │[0m  [31m│[0m 
 [38;5;240m  │[0m  [31m╰[0m[31m─[0m Expected one of: "ident"
[38;5;246m───╯[0m
