tests/snapshots/generated_from_inputs__bad_bad003.snap
---
source: tests/fixtures.rs
description: "// Repeated argument name\nint f(int x, int x) {\n   return x;\n}"
input_file: inputs/bad/bad003.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad003:2:18 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249m([0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[31mx[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m                  [31m┬[0m  
 [38;5;240m  │[0m                  [31m╰[0m[31m─[0m[31m─[0m Duplicate argument `x`
[38;5;246m───╯[0m
[31mError:[0m No main function found

