tests/snapshots/generated_from_inputs__bad_bad004.snap
---
source: tests/fixtures.rs
description: "int main)( {\n        return 0;\n        return 1;\n}\n"
input_file: inputs/bad/bad004.lat
---
[31mError:[0m Syntax error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad004:1:9 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[31m)[0m[38;5;249m([0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m         [31m┬[0m  
 [38;5;240m  │[0m         [31m╰[0m[31m─[0m[31m─[0m Unrecognized token `RParen`
 [38;5;240m  │[0m         [31m│[0m  
 [38;5;240m  │[0m         [31m╰[0m[31m─[0m[31m─[0m Expected one of: "(", ",", ";", "="
[38;5;246m───╯[0m
