tests/snapshots/generated_from_inputs__bad_bad006.snap
---
source: tests/fixtures.rs
description: "int main() {\n        x = 14;\n\treturn 0 ;\n}\n"
input_file: inputs/bad/bad006.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad006:2:9 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[31mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m4[0m[38;5;249m;[0m
 [38;5;240m  │[0m         [31m┬[0m  
 [38;5;240m  │[0m         [31m╰[0m[31m─[0m[31m─[0m Unknown variable `x`
[38;5;246m───╯[0m
