tests/snapshots/generated_from_inputs__bad_bad007.snap
---
source: tests/fixtures.rs
description: "int main() {\n        int x;\n        int x;\n\treturn 0 ;\n}\n"
input_file: inputs/bad/bad007.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad007:3:13 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[31mx[0m[38;5;249m;[0m
 [38;5;240m  │[0m             [31m┬[0m  
 [38;5;240m  │[0m             [31m╰[0m[31m─[0m[31m─[0m Redeclaration of `x`
 [38;5;240m  │[0m             [31m│[0m  
 [38;5;240m  │[0m             [31m╰[0m[31m─[0m[31m─[0m Previous declaration of `x`
[38;5;246m───╯[0m
