tests/snapshots/generated_from_inputs__bad_bad009.snap
---
source: tests/fixtures.rs
description: "int main() {\n        int x;\n        x = true;\n        return 1;\n}\n"
input_file: inputs/bad/bad009.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad009:3:13 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31mt[0m[31mr[0m[31mu[0m[31me[0m[38;5;249m;[0m
 [38;5;240m  │[0m             [31m─[0m[31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m               [31m╰[0m[31m─[0m[31m─[0m[31m─[0m Type mismatch: expected `int`, found `bool`
[38;5;246m───╯[0m
