tests/snapshots/generated_from_inputs__bad_bad010.snap
---
source: tests/fixtures.rs
description: "int main() {\n        if (true)\n                return;\n\t;\n        return 1;\n}\n"
input_file: inputs/bad/bad010.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad010:3:17 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[31mr[0m[31me[0m[31mt[0m[31mu[0m[31mr[0m[31mn[0m[31m;[0m
 [38;5;240m  │[0m                 [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                    [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Type mismatch: expected `int`, found `void`
[38;5;246m───╯[0m
