tests/snapshots/generated_from_inputs__bad_bad011.snap
---
source: tests/fixtures.rs
description: "int main() {\n     return true;\n}\n"
input_file: inputs/bad/bad011.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad011:2:13 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mu[0m[38;5;249mr[0m[38;5;249mn[0m[38;5;249m [0m[31mt[0m[31mr[0m[31mu[0m[31me[0m[38;5;249m;[0m
 [38;5;240m  │[0m             [31m─[0m[31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m               [31m╰[0m[31m─[0m[31m─[0m[31m─[0m Type mismatch: expected `int`, found `bool`
[38;5;246m───╯[0m
