tests/snapshots/generated_from_inputs__bad_bad012.snap
---
source: tests/fixtures.rs
description: "int main() {\n     int i = foo(true);\n     return 0 ;\n}\n\nint foo(boolean b) { b = true; }\n"
input_file: inputs/bad/bad012.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad012:6:20 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249m([0m[38;5;249mb[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mb[0m[38;5;249m)[0m[38;5;249m [0m[31m{[0m[31m [0m[31mb[0m[31m [0m[31m=[0m[31m [0m[31mt[0m[31mr[0m[31mu[0m[31me[0m[31m;[0m[31m [0m[31m}[0m
 [38;5;240m  │[0m                    [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                          [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Missing return statement
[38;5;246m───╯[0m
